--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite ",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue src --ignore-path .gitignore --fix src",
+    "format": "prettier . --write"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
+    "axios": "^1.5.0",
     "date-fns": "^2.11.0",
     "marked": "^0.8.1",
-    "vue": "^3.0.0-beta.10"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.10",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.17.0",
     "faker": "^4.1.0",
-    "vue-cli-plugin-vue-next": "^0.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "prettier": "^3.0.3",
+    "vite": "4.4.9"
   }
 }
